# snow-ops

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
modules/: macros.sql
scripts/: example.sql
src/snow_ops/: __init__.py  __main__.py  audit.py  cli.py  executor.py
src/snowdump/: __init__.py  __main__.py  cli.py  renderer.py
tests/: conftest.py  test_audit.py  test_cli.py  test_executor.py  test_macros.py  test_package.py  test_renderer.py
