[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snow-ops"
version = "0.1.0"
description = "Render Jinja-templated SQL files and execute them on Snowflake"
requires-python = ">=3.10"
dependencies = [
    "snowflake-connector-python>=3.0.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "sqlparse>=0.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
snow-ops = "snow_ops.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
